--- a/prizma/css/style.css
+++ b/prizma/css/style.css
@@ -9,7 +9,8 @@ body {
 
 @media screen and (max-width: 1200px) {
   .container {
-    width: 100%; } }
+    width: 95%;
+    padding: 0; } }
 
 @font-face {
   font-family: 'ProximaNova-ExtrabldIt';
@@ -167,17 +168,39 @@ body {
       -webkit-box-shadow: 0px 0px 11px 5px rgba(22, 0, 230, 0.3);
       box-shadow: 0px 0px 11px 5px rgba(22, 0, 230, 0.3); }
   .button--login {
+    position: relative;
     width: 60px;
     color: #000;
-    text-align: left;
-    background: url("../img/button-login.svg") no-repeat right;
-    background-size: 12px; }
+    text-align: left; }
+    .button--login:after {
+      content: '';
+      position: absolute;
+      top: 12px;
+      right: 0;
+      width: 12px;
+      height: 12px;
+      background: url("../img/button-login.svg") no-repeat center; }
+    .button--login:hover:after {
+      -webkit-animation: login 0.4s 4 alternate;
+      animation: login 0.4s 4 alternate; }
   .button--white {
     color: #1600e6;
     background: #fff; }
     .button--white:hover {
       -webkit-box-shadow: 0px 0px 11px 5px rgba(255, 255, 255, 0.3);
       box-shadow: 0px 0px 11px 5px rgba(255, 255, 255, 0.3); }
+
+@-webkit-keyframes login {
+  0% {
+    right: 0; }
+  100% {
+    right: -5px; } }
+
+@keyframes login {
+  0% {
+    right: 0; }
+  100% {
+    right: -5px; } }
 
 .nav {
   width: 110px;
@@ -195,7 +218,7 @@ body {
   position: relative;
   display: block;
   width: 100%;
-  padding: 0 0 0 15px;
+  padding: 0px 75px 0px 15px;
   color: #000;
   font-size: 16px;
   font-family: 'ProximaNova-Regular', sans-serif;
@@ -203,12 +226,12 @@ body {
   text-transform: uppercase;
   -webkit-transition: 0.3s linear;
   transition: 0.3s linear; }
-  .nav__item--active {
+  .nav__item:hover {
     padding: 5px 75px 5px 15px;
     font-family: 'ProximaNova-Bold', sans-serif;
     background: #fff; }
-    .nav__item--active:before {
-      width: 99% !important; }
+    .nav__item:hover:before {
+      width: 99%; }
   .nav__item:before {
     content: '';
     position: absolute;
@@ -222,18 +245,17 @@ body {
 
 .nav__sublist {
   position: absolute;
-  top: -500px;
+  top: 0;
   left: 200px;
-  display: block;
   width: 300px;
   margin: 0;
   padding: 0;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   list-style: none;
-  background: #fff; }
-  .nav__sublist--active {
-    top: 0; }
+  background: #fff;
+  opacity: 0;
+  clip: rect(0, 0, 0, 0); }
 
 .nav__subitem {
   display: block;
@@ -248,6 +270,14 @@ body {
   .nav__subitem:hover {
     color: #fff;
     background: #61a3db; }
+
+.nav__list > li:hover .nav__sublist {
+  clip: auto;
+  opacity: 1; }
+
+@media screen and (max-width: 1200px) {
+  .nav {
+    margin: 0 auto 0 100px; } }
 
 .slider {
   overflow: hidden; }
@@ -318,6 +348,22 @@ body {
   .slider__item--tw {
     background: url("../img/social-tw.svg") no-repeat center; }
 
+@media screen and (max-width: 1200px) {
+  .slider__container {
+    width: 95%;
+    padding: 0; } }
+
+@media screen and (max-width: 768px) {
+  .slider__flex,
+  .slider__box {
+    width: auto; }
+  .slider__flex {
+    margin: 0; }
+  .slider__box--1 {
+    background-position-x: -100px; }
+  .slider__text {
+    width: 300px; } }
+
 .step {
   padding: 40px 0 60px 0;
   background: #e9edf1; }
@@ -371,6 +417,24 @@ body {
     content: '3'; }
   .step__box--4:before {
     content: '4'; }
+
+@media screen and (max-width: 768px) {
+  .step {
+    padding: 50px 0; }
+  .step__name {
+    font-size: 20px; }
+  .step__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .step__box {
+    margin: 0 0 50px 0; }
+    .step__box:last-child {
+      margin: 0; } }
 
 .banner {
   padding: 70px 0 0 0; }
@@ -450,6 +514,48 @@ body {
   height: 588px;
   background: url("../img/banner-mockup.png") no-repeat center; }
 
+@media screen and (max-width: 1200px) {
+  .banner {
+    padding: 70px 0; }
+  .banner__mockup {
+    display: none; } }
+
+@media screen and (max-width: 768px) {
+  .banner {
+    padding: 50px 0 0 0; }
+  .banner__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .banner__text {
+    width: auto;
+    padding: 100px 0 0 0;
+    background: url("../img/banner-metatrader.jpg") no-repeat top;
+    background-size: 70px; }
+  .banner__name {
+    font-size: 20px;
+    text-align: center; }
+  .banner__sub {
+    margin: 10px 0 30px 0;
+    text-align: center; }
+  .banner__list {
+    width: 230px;
+    margin: 0 auto 30px;
+    font-size: 16px; }
+    .banner__list li {
+      line-height: normal; }
+  .banner__button {
+    margin: 0 auto 20px; }
+  .banner__platform {
+    margin: auto; }
+  .banner__mockup {
+    display: block;
+    width: 100%;
+    height: 330px;
+    margin: 50px 0 0 0;
+    background-size: 300px; } }
+
 .edge {
   padding: 70px 0;
   background: #e9edf1; }
@@ -499,6 +605,22 @@ body {
     -webkit-transform: scale(-1, 1);
     transform: scale(-1, 1); }
 
+@media screen and (max-width: 768px) {
+  .edge {
+    padding: 50px 0; }
+  .edge__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .edge__box {
+    margin: 0 0 50px 0; }
+    .edge__box:last-child {
+      margin: 0; } }
+
 .info {
   padding: 80px 0;
   border-bottom: 1px solid #e9edf1; }
@@ -520,6 +642,16 @@ body {
 
 .info__text {
   font-family: 'ProximaNova-Light', sans-serif; }
+
+@media screen and (max-width: 768px) {
+  .info {
+    padding: 50px 0; }
+  .info__name {
+    font-size: 20px; }
+  .info__hr {
+    margin: 20px auto; }
+  .info__text:last-child {
+    margin: 0; } }
 
 .multyplatform {
   padding: 100px 0; }
@@ -547,10 +679,32 @@ body {
 .multyplatform__name {
   font-size: 30px;
   font-weight: normal;
-  font-family: 'ProximaNova-Bold', sans-serif; }
+  font-family: 'ProximaNova-Bold', sans-serif;
+  text-transform: uppercase; }
 
 .multyplatform__sub {
   font-family: 'ProximaNova-Light', sans-serif; }
+
+@media screen and (max-width: 1200px) {
+  .multyplatform__flex {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .multyplatform__mockup,
+  .multyplatform__text {
+    margin: auto; } }
+
+@media screen and (max-width: 768px) {
+  .multyplatform {
+    padding: 50px 0; }
+  .multyplatform__mockup {
+    height: 150px;
+    background-size: 300px; }
+  .multyplatform__name {
+    font-size: 20px;
+    text-align: center; } }
 
 .ready {
   padding: 50px 0;
@@ -570,6 +724,12 @@ body {
 
 .ready__start {
   margin: auto; }
+
+@media screen and (max-width: 768px) {
+  .ready__name {
+    font-size: 20px; }
+  .ready__text {
+    margin: 16px 0; } }
 
 .payment {
   padding: 20px 0;
@@ -706,3 +866,29 @@ body {
     background: url("../img/social-footer-in.svg") no-repeat center; }
   .footer__item--tw {
     background: url("../img/social-footer-tw.svg") no-repeat center; }
+
+@media screen and (max-width: 768px) {
+  .footer__links {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    margin: 30px 0; }
+    .footer__links li:nth-child(even) {
+      display: none; }
+  .footer__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .footer__social {
+    width: 200px;
+    margin: 0 0 30px 0; }
+  .footer__item {
+    display: block;
+    width: 25px;
+    height: 25px; }
+  .footer__copyright {
+    -webkit-box-ordinal-group: 3;
+    -ms-flex-order: 2;
+    order: 2; } }
