--- a/prizma/sass/blocks/banner.scss
+++ b/prizma/sass/blocks/banner.scss
@@ -77,3 +77,66 @@
   height: 588px;
   background: url('../img/banner-mockup.png') no-repeat center;
 }
+
+@media screen and ($tablet-widths) {
+  .banner {
+    padding: 70px 0;
+  }
+  
+  .banner__mockup {
+    display: none;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .banner {
+    padding: 50px 0 0 0;
+  }
+  
+  .banner__flex {
+    flex-direction: column;
+  }
+  
+  .banner__text {
+    width: auto;
+    padding: 100px 0 0 0;
+    background: url('../img/banner-metatrader.jpg') no-repeat top;
+    background-size: 70px;
+  }
+  
+  .banner__name {
+    font-size: 20px;
+    text-align: center;
+  }
+  
+  .banner__sub {
+    margin: 10px 0 30px 0;
+    text-align: center;
+  }
+  
+  .banner__list {
+    width: 230px;
+    margin: 0 auto 30px;
+    font-size: 16px;
+    
+    li {
+      line-height: normal;
+    }
+  }
+  
+  .banner__button {
+    margin: 0 auto 20px;
+  }
+  
+  .banner__platform {
+    margin: auto;
+  }
+  
+  .banner__mockup {
+    display: block;
+    width: 100%;
+    height: 330px;
+    margin: 50px 0 0 0;
+    background-size: 300px;
+  }
+}
