--- a/prizma/sass/blocks/edge.scss
+++ b/prizma/sass/blocks/edge.scss
@@ -54,3 +54,24 @@
     transform: scale(-1, 1);
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .edge {
+    padding: 50px 0;
+  }
+  
+  .edge__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .edge__box {
+    margin: 0 0 50px 0;
+    
+    &:last-child {
+      margin: 0;
+    }
+  }
+}
