--- a/prizma/sass/blocks/multyplatform.scss
+++ b/prizma/sass/blocks/multyplatform.scss
@@ -23,8 +23,37 @@
   font-size: 30px;
   font-weight: normal;
   font-family: 'ProximaNova-Bold', sans-serif;
+  text-transform: uppercase;
 }
 
 .multyplatform__sub {
   font-family: 'ProximaNova-Light', sans-serif;
+}
+
+@media screen and ($tablet-widths) {
+  .multyplatform__flex {
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  
+  .multyplatform__mockup,
+  .multyplatform__text {
+    margin: auto;
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .multyplatform {
+    padding: 50px 0;
+  }
+  
+  .multyplatform__mockup {
+    height: 150px;
+    background-size: 300px;
+  }
+  
+  .multyplatform__name {
+    font-size: 20px;
+    text-align: center;
+  }
 }
