--- a/prizma/sass/blocks/step.scss
+++ b/prizma/sass/blocks/step.scss
@@ -79,3 +79,28 @@
     }
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .step {
+    padding: 50px 0;
+  }
+  
+  .step__name {
+    font-size: 20px;
+  }
+  
+  .step__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .step__box {
+    margin: 0 0 50px 0;
+    
+    &:last-child {
+      margin: 0;
+    }
+  }
+}
