--- a/prizma/css/style.css
+++ b/prizma/css/style.css
@@ -241,7 +241,9 @@ body {
 
 @media screen and (max-width: 768px) {
   .header {
-    padding: 26px 0; }
+    padding: 26px 0;
+    -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
+    box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35); }
   .header--scroll .nav {
     left: 0;
     display: block;
@@ -261,6 +263,8 @@ body {
     width: 100%; }
   .header--scroll .nav__subitem {
     padding: 5px 0; }
+  .header--scroll .header__menu {
+    opacity: 1; }
   .header__flex {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
@@ -269,6 +273,9 @@ body {
     position: absolute;
     left: 0;
     width: 30px; }
+  .header__menu {
+    display: block;
+    opacity: 0; }
   .header__language,
   .header__search,
   .header__user {
