--- a/prizma/sass/blocks/header.scss
+++ b/prizma/sass/blocks/header.scss
@@ -1,5 +1,6 @@
 .header {
   padding: 35px 0;
+  box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
   background: $bg;
   transition: 0.5s;
 }
@@ -163,12 +164,18 @@
   list-style: none;
 }
 
-@media screen and ($tablet-widths) {}
+@media screen and ($tablet-widths) {
+  .header--scroll {
+    
+    .nav {
+      margin: 0;
+    }
+  }
+}
 
 @media screen and ($mobile-widths) {
   .header {
     padding: 26px 0;
-    box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
   }
   
   .header--scroll {
@@ -205,10 +212,6 @@
     .nav__subitem {
       padding: 5px 0;
     }
-    
-    .header__menu {
-      opacity: 1;
-    }
   }
   
   .header__flex {
@@ -222,8 +225,7 @@
   }
   
   .header__menu {
-    display: block;
-    opacity: 0;
+    display: none;
   }
   
   .header__language,
