--- a/prizma/sass/blocks/banner.scss
+++ b/prizma/sass/blocks/banner.scss
@@ -73,9 +73,9 @@
 }
 
 .banner__mockup {
-  width: 533px;
-  height: 588px;
-  background: url('../img/banner-mockup.png') no-repeat center;
+  width: 412px;
+  height: 550px;
+  background: url('../img/banner-mockup.png') no-repeat bottom;
 }
 
 @media screen and ($tablet-widths) {
