--- a/prizma/css/style.css
+++ b/prizma/css/style.css
@@ -91,6 +91,9 @@ body {
   font-style: normal; }
 
 .header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
   padding: 35px 0;
   -webkit-box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
   box-shadow: 0px 3px 7px 0px rgba(174, 165, 255, 0.35);
@@ -99,9 +102,6 @@ body {
   transition: 0.5s; }
 
 .header--scroll {
-  position: fixed;
-  top: 0;
-  width: 100%;
   padding: 26px 0;
   background: rgba(233, 237, 241, 0.9);
   z-index: 5; }
@@ -648,9 +648,9 @@ body {
   background-size: 20px; }
 
 .banner__mockup {
-  width: 533px;
-  height: 588px;
-  background: url("../img/banner-mockup.png") no-repeat center; }
+  width: 412px;
+  height: 550px;
+  background: url("../img/banner-mockup.png") no-repeat bottom; }
 
 @media screen and (max-width: 1200px) {
   .banner {
@@ -806,10 +806,10 @@ body {
   align-items: center; }
 
 .multyplatform__mockup {
-  width: 595px;
-  height: 262px;
+  width: 510px;
+  height: 400px;
   background: url("../img/multyplatform-mockup.png") no-repeat center;
-  background-size: 595px; }
+  background-size: cover; }
 
 .multyplatform__text {
   width: 570px; }
@@ -838,7 +838,7 @@ body {
   .multyplatform {
     padding: 50px 0; }
   .multyplatform__mockup {
-    height: 150px;
+    height: 240px;
     background-size: 300px; }
   .multyplatform__name {
     font-size: 20px;
