--- a/prizma/sass/blocks/multyplatform.scss
+++ b/prizma/sass/blocks/multyplatform.scss
@@ -9,10 +9,10 @@
 }
 
 .multyplatform__mockup {
-  width: 595px;
-  height: 262px;
+  width: 510px;
+  height: 400px;
   background: url('../img/multyplatform-mockup.png') no-repeat center;
-  background-size: 595px;
+  background-size: cover;
 }
 
 .multyplatform__text {
@@ -48,7 +48,7 @@
   }
   
   .multyplatform__mockup {
-    height: 150px;
+    height: 240px;
     background-size: 300px;
   }
   
