--- a/prizma/sass/blocks/header.scss
+++ b/prizma/sass/blocks/header.scss
@@ -18,11 +18,12 @@
   z-index: 5;
   
   .header__settings {
-    margin: 0 0 0 15px;
     z-index: 10;
   }
   
   .header__menu {
+    position: relative;
+    left: 15px;
     display: block;
   }
   
