--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -1574,11 +1574,13 @@ body {
 
 .tab__content {
   display: none;
+  height: 600px;
   padding: 6px 12px;
   border: 1px solid #6420ff;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
-  border-top: none; }
+  border-top: none;
+  overflow: scroll; }
   .tab__content h3 {
     color: #2f2861;
     font-size: 30px;
