--- a/prizma/sass/blocks/banner.scss
+++ b/prizma/sass/blocks/banner.scss
@@ -33,7 +33,7 @@
   padding: 0;
   font-size: 20px;
   font-family: 'ProximaNova-Light', sans-serif;
-  list-style: inside url('../img/banner-li.svg');
+  list-style: inside url('../img/list.svg');
   
   li {
     line-height: 40px;
