--- a/prizma/sass/blocks/inner.scss
+++ b/prizma/sass/blocks/inner.scss
@@ -43,6 +43,11 @@
                 #fff url('../img/accounts-bg-right.svg') no-repeat 90% 130px;
     background-size: 845px, 100px;
   }
+  
+  &--templates {
+    padding: 100px 0;
+    background: #fff url('../img/templates-bg.svg') no-repeat center;
+  }
 }
 
 .inner__subtext {
@@ -50,6 +55,45 @@
   font-size: 18px;
   font-family: 'ProximaNova-LightIt', serif;
   text-align: center;
+}
+
+.inner__text {
+  font-family: 'ProximaNova-Regular', sans-serif;
+}
+
+.inner__contact {
+  font-family: 'ProximaNova-Regular', sans-serif;
+  
+  b {
+    font-size: 20px;
+    font-weight: normal;
+    font-family: 'ProximaNova-Bold', sans-serif;
+  }
+  
+  a {
+    color: #1600e6;
+    font-family: 'ProximaNova-Bold', sans-serif;
+    text-decoration: none;
+  }
+}
+
+.inner__name {
+  display: block;
+  font-weight: normal;
+  font-family: 'ProximaNova-Bold', sans-serif;
+  
+  &--big {
+    font-size: 30px;
+  }
+  
+  &--small {
+    font-size: 20px;
+  }
+}
+
+.inner__list {
+  font-family: 'ProximaNova-Regular', sans-serif;
+  list-style: url('../img/list.svg');
 }
 
 @media screen and ($tablet-widths) {}
@@ -80,5 +124,38 @@
                   #fff url('../img/accounts-bg-right.svg') no-repeat right bottom;
       background-size: 300px, 100px;
     }
+  }
+  
+  .inner__text {
+    font-size: 13px;
+  }
+  
+  .inner__contact {
+    text-align: center;
+    
+    b {
+      display: block;
+      font-size: 18px;
+    }
+    
+    a {
+      display: block;
+    }
+  }
+  
+  .inner__name {
+    text-align: center;
+    
+    &--big {
+      font-size: 20px;
+    }
+    
+    &--small {
+      font-size: 18px;
+    }
+  }
+
+  .inner__list {
+    font-size: 13px;
   }
 }
