--- a/prizma/sass/blocks/inner.scss
+++ b/prizma/sass/blocks/inner.scss
@@ -44,6 +44,11 @@
     background-size: 845px, 100px;
   }
   
+  &--platforms {
+    background: #fff url('../img/platforms-bg.svg') no-repeat center;
+    background-size: cover;
+  }
+  
   &--templates {
     padding: 100px 0;
     background: #fff url('../img/templates-bg.svg') no-repeat center;
