--- a/prizma/css/style.css
+++ b/prizma/css/style.css
@@ -1025,12 +1025,26 @@ body {
   height: 48px;
   border: none;
   background: transparent url("../img/footer-livechat.svg") no-repeat center;
+  -webkit-animation: livechat 1s ease infinite alternate;
+  animation: livechat 1s ease infinite alternate;
   -webkit-transition: 0.3s;
   transition: 0.3s;
   cursor: pointer; }
   .footer__livechat:hover {
     -webkit-transform: scale(1.1);
     transform: scale(1.1); }
+
+@-webkit-keyframes livechat {
+  0% {
+    opacity: 0.5; }
+  100% {
+    opacity: 1; } }
+
+@keyframes livechat {
+  0% {
+    opacity: 0.5; }
+  100% {
+    opacity: 1; } }
 
 @media screen and (max-width: 768px) {
   .footer__links {
@@ -1056,7 +1070,12 @@ body {
   .footer__copyright {
     -webkit-box-ordinal-group: 3;
     -ms-flex-order: 2;
-    order: 2; } }
+    order: 2; }
+  .footer__livechat {
+    right: 15px;
+    bottom: 15px;
+    width: 50px;
+    height: 38px; } }
 
 .inner {
   background: #e9edf1; }
@@ -1094,6 +1113,9 @@ body {
   .inner__content--accounts {
     background: #fff url("../img/accounts-bg-left.svg") no-repeat left top, #fff url("../img/accounts-bg-right.svg") no-repeat 90% 130px;
     background-size: 845px, 100px; }
+  .inner__content--platforms {
+    background: #fff url("../img/platforms-bg.svg") no-repeat center;
+    background-size: cover; }
   .inner__content--templates {
     padding: 100px 0;
     background: #fff url("../img/templates-bg.svg") no-repeat center; }
@@ -1245,3 +1267,49 @@ body {
     width: 10px; }
   .table__unchecked img {
     width: 10px; } }
+
+.webtrader__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin: 40px 0 0 0; }
+
+.webtrader__mockup {
+  width: 600px;
+  height: 452px;
+  background: url("../img/webtrader-mockup.png") no-repeat center; }
+
+.webtrader__list {
+  padding: 0;
+  font-family: 'ProximaNova-Bold', sans-serif;
+  line-height: 40px;
+  list-style: none; }
+
+.webtrader__button {
+  margin: 40px 0 0 0;
+  line-height: normal; }
+
+@media screen and (max-width: 1200px) {
+  .webtrader__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; } }
+
+@media screen and (max-width: 768px) {
+  .webtrader__mockup {
+    width: 300px;
+    height: 250px;
+    background-size: contain; }
+  .webtrader__list {
+    font-size: 13px;
+    text-align: center;
+    line-height: 20px; }
+  .webtrader__button {
+    margin: 40px auto 0; } }
