--- a/prizma/templates/forex.html
+++ b/prizma/templates/forex.html
@@ -67,7 +67,7 @@
             <a class="nav__item">Platforms</a>
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">PrizmaFX MetaTrader 4</a></li>
-              <li><a class="nav__subitem" href="#">WebTrader</a></li>
+              <li><a class="nav__subitem" href="../platforms/webtrader.html">WebTrader</a></li>
               <li><a class="nav__subitem" href="#">Trade Mobile</a></li>
             </ul>
           </li>
