--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -1587,8 +1587,7 @@ body {
   .tab__content p {
     color: #2f2861;
     font-size: 18px;
-    font-weight: 300;
-    text-align: center; }
+    font-weight: 300; }
   .tab__content b {
     color: #2f2861;
     font-size: 20px;
