--- a/prizma/sass/style.scss
+++ b/prizma/sass/style.scss
@@ -21,3 +21,5 @@
 @import 'blocks/webtrader';
 @import 'blocks/mobile';
 @import 'blocks/glossary';
+@import 'blocks/client';
+@import 'blocks/form';
